# odinvk

./: .gitignore  gg  glfw.c  main  main.odin  makefile  ols.json  shader.frag  shader.vert  vk_mem_alloc.h  vma.cpp
generator/: Cargo.toml  vk.xml
generator/src/: main.rs
test/: glfw.c  main.odin  makefile  ols.json
vk/: vk.odin
