[package]
name = "generator"
version = "0.1.0"
authors = ["atil <atilkurtulmus@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
urc = "0.2.0"
c-expr = "0.3.1"
rustc-hash = "1.1.0"
regex = "1.4.3"
Inflector = "0.11.4"

[build-dependencies]
cc = "1.0"
